--- a/src/App.css
+++ b/src/App.css
@@ -22,3 +22,20 @@
   justify-content: space-between;
   padding: 0.4rem 5rem;
 }
+.welcome {
+  font-size: 3rem;
+  background: -webkit-linear-gradient(#083fd0, #0179be, #00efc5);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+small {
+  color: #1b182e;
+  font-size: 1rem;
+}
+
+h3 {
+  font-size: 1.5rem;
+  text-shadow: 0px 2px 2px rgba(255, 255, 255, 0.4);
+  font-weight: 500;
+}
